# ci-cd-rust

./: Cargo.toml  Dockerfile  Makefile  README.md  regex-rules.json
.github/workflows/: clippy.yml  docker-check.yml  docker-registry.yml
src/: lib.rs  main.rs
