[package]
name = "redactr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlprule = "0.6.4"
regex = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0"
psutil = "3.2.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
